--- a/Benchmarks/Water Chemistry/TSS Class Project/TSS Ref Benchmarks V2.Rmd
+++ b/Benchmarks/Water Chemistry/TSS Class Project/TSS Ref Benchmarks V2.Rmd
@@ -57,6 +57,7 @@ metrics_desc <- read_excel("~/BioMonORDEQ/Benchmarks/Water Chemistry/TSS Class P
 
 # FOR TESTING INDIVIDUAL METRICS/COMIDS (e.g., to ensure names match)
 #test <- StreamCatTools::sc_get_data(comid = '23910659', metric = 'precipminusevt', showAreaSqKm = FALSE, aoi='watershed')
+#test <- StreamCatTools::sc_get_data(comid = '23910659', metric = 'thalwegdepth', showAreaSqKm = FALSE, aoi='other')
 ```
 
 #### Run function to query ALL StreamCat data for selected COMIDs by subcategory
@@ -83,7 +84,7 @@ if(type == "Agriculture"){
 if(type == "Climate"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'precip2008,precip8110,precip9120,tmax8110,tmax9120,tmean2008,tmean8110,tmean9120,tmin8110,tmin9120,inorgnwetdep2008,nh42008,no32008,sn2008,precipminusevt,wetindex', 
+                                                                           metric = 'precip2008,precip8110,precip9120,tmax8110,tmax9120,tmean2008,tmean8110,tmean9120,tmin8110,tmin9120,inorgnwetdep2008,nh42008,no32008,sn2008,precip_minus_evt,wetindex', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
@@ -163,7 +164,7 @@ if(type == "Wildfire"){
 if(type == "Others"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'bankfulldepth,bankfullwidth,ici,iwi,mast2008,msst2008,mwst2008,thalwagdepth,wettedwidth', 
+                                                                           metric = 'bankfulldepth,bankfullwidth,ici,iwi,mast2008,msst2008,mwst2008,thalwegdepth,wettedwidth', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='other')) 
   }
@@ -344,45 +345,33 @@ boxplot(tss_vars_selected$logTSS, ylab = "TSS")
 ```
 
 ## PREDICTOR VARIABLES
+
 ```{r}
+# Kernel density plot function
+kd_plots <- function(data, filter_col_name, filter_value) {
+  data %>%
+    filter(.data[[filter_col_name]] == filter_value) %>% # Using .data[[]] for dynamic column names
+    select(BANKFULLWIDTH:L3Eco) %>% 
+    select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
+  keep(is.numeric) %>% 
+  gather() %>% 
+  ggplot(aes(value)) +
+  facet_wrap(~ key, scales = "free") +
+  geom_density() +
+  geom_rug() + ggtitle(paste0(filter_value))
+}
+
 # Top 20 variables from RF model broken out by reference status
+kd_plots(data = tss_vars_selected, "ReferenceSite", "REFERENCE")
+kd_plots(data = tss_vars_selected, "ReferenceSite", "MODERATELY DISTURBED")
+kd_plots(data = tss_vars_selected, "ReferenceSite", "MOST DISTURBED")
 
-# Reference
-tss_vars_selected %>% 
-  filter(ReferenceSite == 'REFERENCE') %>% 
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() + ggtitle("Reference")
+# Top 20 variables from RF model broken out by L2 Ecoregion
+kd_plots(data = tss_vars_selected, "L2Eco", "Western Cordillera")
+kd_plots(data = tss_vars_selected, "L2Eco", "Cold Deserts")
+kd_plots(data = tss_vars_selected, "L2Eco", "Marine West Coast Forest")
 
-# Moderately Disturbed
-tss_vars_selected %>% 
-  filter(ReferenceSite == 'MODERATELY DISTURBED') %>% 
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() + ggtitle("MODERATELY DISTURBED")
-
-# MOST DISTURBED
-tss_vars_selected %>% 
-  filter(ReferenceSite == 'MOST DISTURBED') %>% 
-  select(BANKFULLWIDTH:L3Eco) %>% 
-  select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS') %>% 
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() + ggtitle("MOST DISTURBED")
-
+# Top 20 variables from RF model broken out by TSS category (ND, med, high)
 # Non-detects
 tss_vars_selected %>%
   filter(TSS<=0.25 | TSS<=0.5) %>%  # N = 356
@@ -429,11 +418,30 @@ tss_vars_selected %>%
   facet_wrap(~ key, scales = "free") +
   geom_density() +
   geom_rug() + ggtitle("All sites")
+
 ```
 
 # **5 - RANDOM FOREST MODELS**
 
-## FULL MODEL - ALL PREDICTORS INCLUDED (N = 83)
+```{r}
+# SUBSET DATA
+tss.cal <- tss_vars_selected %>%  #subset CALibration dataset
+  filter(cal_val == 'CAL') %>%  
+  select(-c(MLocID:TSS, COMID))
+
+tss.val <- tss_vars_selected %>%  #subset VALidation dataset
+  filter(cal_val == 'VAL') %>%  
+  select(-c(MLocID:TSS, COMID))
+
+tss.ref <- tss_vars_selected %>% #subset reference only dataset
+  filter(ReferenceSite == 'REFERENCE') %>%  
+  select(-c(MLocID:TSS, COMID))
+
+tss.cal_val <- rbind(tss.cal, tss.val)
+write_xlsx(tss.cal_val, path = paste0("C://Users//sberzin//OneDrive - Oregon//Desktop//TSS-Cal-val_New", Sys.Date(), ".xlsx"))
+```
+
+## FULL MODEL - ALL PREDICTORS INCLUDED (N = 79)
 
 #### Tuning the model (finding best mtry)
 
@@ -511,6 +519,7 @@ set.seed(32)
 rf.red_20 <- randomForest(logTSS ~ WDRW_LDWS + PCTCONIF2001WS + CLAYWS + PESTIC1997WS + SANDWS + PCTCROP2001WS + POPDEN2010WS + PRECIP9120WS + PCTAGSLPMID2001WS + PCT_EROD + SW_FLUXWS + PCTIMP2001WS + RDCRSWS + WTDEPWS + ELEVWS + WETINDEXWS + PCTSHRB2001WS + KFFACTWS + PCTICE2001WS + RCKDEPWS, data = tss.cal, importance = TRUE,  keep.forest = TRUE, mtry=7, ntree = 500) 
 
 print(rf.red_20)
+summary(rf.red_20)
 
 varImpPlot(rf.red_20, type = 1, n.var = 20, main = "Reduced Model top 20") #variable importance plot
 #varImpPlot(rf.red_20, type = 2, n.var = 20, main = "Reduced Model top 20") #variable importance plot
@@ -611,115 +620,6 @@ abline(a=0,b=1)
 residuals.red_15_val <- (exp(tss.val$logTSS)-1) - (exp(pred.rf.red_15_val)-1) # Observed minus predicted 
 ```
 
-#### Section just for making report plots
-
-```{r}
-# ALL-SITES PREDICTION PLOTS -----------------------------------------------------------------------------------------------------------------------
-par(mfrow = c(1,2))
-
-#Untransformed plot log scale axes *** FOR REPORT --- CAL dataset 
-plot((exp(tss.cal$logTSS)-1) ~ (exp(pred.rf.red_15)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = 'CAL', 
-     xlim = (c(0.2,100)), ylim = c(0.2,100))
-abline(a=0,b=1)
-#text(50, 0.5, "RMSE = 6.35 
-#%Var = 26.58")
-
-par(mfrow = c(1,2))
-
-#Untransformed plot log scale axes *** FOR REPORT --- apply CAL model to VAL dataset 
-plot((exp(tss.val$logTSS)-1) ~ (exp(pred.rf.red_15_val)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = '',
-  xlim = (c(0.2,100)), ylim = c(0.2,100))
-abline(a=0,b=1)
-#text(50, 0.5, "RMSE = 13.68 
-#%Var = #")
-
-# VAL residuals
-#residuals.red_15 <- (exp(tss.cal$logTSS)-1) - (exp(pred.rf.red_15)-1) # Observed minus predicted 
-plot(residuals.red_15_val ~ (exp(pred.rf.red_15_val)-1), xlab = "predicted TSS (mg/L)", ylab = "residuals (obs-pred)", main="", log = "x")
-abline(h=0, col = "red", pch = 2, lty = 2)
-
-
-
-# REF-ONLY PREDICTION PLOT -------------------------------------------------------------------------------------------------------------------------
-# must run bottom section of code before this
-par(mfrow = c(1,2))
-
-pred.rf.ref.red_11 <- predict(rf.ref.red_11, newdata = tss.ref)
-plot((exp(tss.ref$logTSS) -1) ~ (exp(pred.rf.ref.red_11)-1), log = "xy",
-     xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', xlim = c(0.2,100), ylim = c(0.2,100), main = '')
-abline(a=0,b=1)
-
-# REF RESIDUALS
-residuals.ref_11 <- (exp(tss.ref$logTSS)-1) - (exp(pred.rf.ref.red_11)-1) # Observed minus predicted 
-plot(residuals.ref_11 ~ (exp(pred.rf.ref.red_11)-1), xlab = "predicted TSS (mg/L)", ylab = "residuals (obs-pred)", main="", log = "x")
-abline(h=0, col = "red", pch = 2, lty = 2)
-
-
-par(mfrow = c(1,2))
-# ALL-SITESREF EXPECTATIONS ------------------------------------------------------------------------------------------------------------------------
-# must run bottom section of code before this
-pred.rf.red_15.all<- predict(rf.red_15, tss.cal_val.refadj) #model prediction on cal+val dataset
-plot((exp(tss.cal_val.refadj$logTSS)-1) ~ (exp(pred.rf.red_15.all)-1), log = "xy", xlab = 'TSS reference expectations (mg/L)', ylab = 'observed TSS (mg/L)', ylim = c(0.2,100), xlim = c(0.2,100), main = 'All-Sites')
-abline(a=0,b=1, untf = TRUE)
-#abline(a=0.6931472,b=1, col = 'red')
-abline(a=0,b=2, col = 'red', lty = 'dashed', untf = TRUE)
-#fix scales and logs
-# must run bottom section of code before this
-
-
-
-# REF-ONLY REF EXPECTATIONS ------------------------------------------------------------------------------------------------------------------------
-# must run bottom section of code before this
-pred.rf.ref.red_11 <- predict(rf.ref.red_11, newdata = tss.cal_val)
-plot((exp(tss.cal_val$logTSS) -1) ~ (exp(pred.rf.ref.red_11)-1), log = "xy",
-     xlab = 'TSS reference expectations (mg/L)', ylab = 'observed TSS (mg/L)', xlim = c(0.2,100), ylim = c(0.2,100), main = 'Reference-Only')
-abline(a=0,b=1, untf = TRUE)
-abline(a=0,b=2, col = 'red', lty = 'dashed', untf = TRUE)
-
-
-# CALCULATE PROPORTIONS ABOVE 1:1 AND 2:1 LINES
-
-oe.ref <- cbind(pred.rf.ref.red_11, tss.cal_val$logTSS)
-oe.ref <- as.data.frame(oe.ref) %>% 
-  rename(pred_logTSS = V2) %>% 
-  mutate(obs_TSS = exp(tss.cal_val$logTSS) -1) %>% 
-  mutate(pred_TSS = exp(pred.rf.ref.red_11)-1) %>% 
-  mutate('O/E' = obs_TSS/pred_TSS)
-
-print(sum(oe.ref$`O/E`>1)/741) # prop above 1:1 line
-print(sum(oe.ref$`O/E`>2)/741) # prop above 2:1 line
-
-
-```
-
-#### Run all sites (CAL AND VAL) through final reduced model.
-
-```{r}
-pred.rf.red_15_all <- predict(rf.red_15, newdata = tss.cal_val)
-plot(tss.cal_val$logTSS ~ pred.rf.red_15_all, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,5), ylim = c(0,5), main = 'red_15_ALL')
-abline(a=0,b=1)
-
-# Model error
-# (rmse<-sqrt(sum((pred.rf.red_15_all - tss.cal_val$logTSS)^2)/length(tss.cal_val$logTSS))) #untransformed RMSE
-ut_pred.rf.red_15_all <- exp(pred.rf.red_15_all)-1
-ut_tss.all <- exp(tss.cal_val$logTSS)-1
-RMSE.ut.rf.red_15_all <- sqrt(sum((ut_pred.rf.red_15_all - ut_tss.all)^2)/length(tss.cal_val$logTSS))
-print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_15_all))
-
-RMSE.ut.rf.red_15_all_scaled <- RMSE.ut.rf.red_15_all/range_tss
-print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_15_all_scaled*100, '%'))
-
-oe.allsites <- cbind(pred.rf.red_15_all, tss.cal_val$logTSS)
-oe.allsites <- as.data.frame(oe.allsites) %>% 
-  rename(pred_logTSS = V2) %>% 
-  mutate(obs_TSS = exp(tss.cal_val$logTSS) -1) %>% 
-  mutate(pred_TSS = exp(pred.rf.red_15_all)-1) %>% 
-  mutate('O/E' = obs_TSS/pred_TSS)
-
-print(sum(oe.allsites$`O/E`>1)/741) # prop above 1:1 line
-print(sum(oe.allsites$`O/E`>2)/741) # prop above 2:1 line
-```
-
 #### 4 predictors (not using this one)
 
 ```{r}
@@ -756,8 +656,7 @@ print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_4_scaled*100, '%'))
 # HUMAN INFLUENCED VARS --looking at all reference sites.
 
 # Select only the 8 human influenced predictors from the reduced model.
-tss.ref.hi <- tss.sc %>% 
-  filter(ReferenceSite == 'REFERENCE') %>% 
+tss.ref.hi <- tss.ref %>% 
   #filter(cal_val == 'CAL') %>% 
   select(c(WDRW_LDWS,PESTIC1997WS,PCTCROP2001WS,POPDEN2010WS,PCTAGSLPMID2001WS,SW_FLUXWS,PCTIMP2001WS,RDCRSWS))
 
@@ -1066,7 +965,106 @@ RMSE.ut_pred.rf.ref.red_11.all_scaled <- RMSE.ut_pred.rf.ref.red_11.all/range_ts
 print(paste("scaled untransformed RMSE", RMSE.ut_pred.rf.ref.red_11.all_scaled*100, '%'))
 ```
 
-#### Shannon plot CAL and VAL all sites
+#### Run all sites (CAL AND VAL) through final reduced model.
+
+```{r}
+pred.rf.red_15_all <- predict(rf.red_15, newdata = tss.cal_val)
+plot(tss.cal_val$logTSS ~ pred.rf.red_15_all, xlab = 'predicted logTSS', ylab = 'observed logTSS', xlim = c(0,5), ylim = c(0,5), main = 'red_15_ALL')
+abline(a=0,b=1)
+
+# Model error
+# (rmse<-sqrt(sum((pred.rf.red_15_all - tss.cal_val$logTSS)^2)/length(tss.cal_val$logTSS))) #untransformed RMSE
+ut_pred.rf.red_15_all <- exp(pred.rf.red_15_all)-1
+ut_tss.all <- exp(tss.cal_val$logTSS)-1
+RMSE.ut.rf.red_15_all <- sqrt(sum((ut_pred.rf.red_15_all - ut_tss.all)^2)/length(tss.cal_val$logTSS))
+print(paste("inverse natural log RMSE =", RMSE.ut.rf.red_15_all))
+
+RMSE.ut.rf.red_15_all_scaled <- RMSE.ut.rf.red_15_all/range_tss
+print(paste("scaled untransformed RMSE", RMSE.ut.rf.red_15_all_scaled*100, '%'))
+
+oe.allsites <- cbind(pred.rf.red_15_all, tss.cal_val$logTSS)
+oe.allsites <- as.data.frame(oe.allsites) %>% 
+  rename(pred_logTSS = V2) %>% 
+  mutate(obs_TSS = exp(tss.cal_val$logTSS) -1) %>% 
+  mutate(pred_TSS = exp(pred.rf.red_15_all)-1) %>% 
+  mutate('O/E' = obs_TSS/pred_TSS)
+
+print(sum(oe.allsites$`O/E`>1)/741) # prop above 1:1 line
+print(sum(oe.allsites$`O/E`>2)/741) # prop above 2:1 line
+```
+
+#### Section just for making report plots
+
+```{r}
+# ALL-SITES PREDICTION PLOTS -----------------------------------------------------------------------------------------------------------------------
+par(mfrow = c(1,2))
+
+#Untransformed plot log scale axes *** FOR REPORT --- CAL dataset 
+plot((exp(tss.cal$logTSS)-1) ~ (exp(pred.rf.red_15)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = 'CAL', 
+     xlim = (c(0.2,100)), ylim = c(0.2,100))
+abline(a=0,b=1)
+#text(50, 0.5, "RMSE = 6.35 
+#%Var = 26.58")
+
+par(mfrow = c(1,2))
+
+#Untransformed plot log scale axes *** FOR REPORT --- apply CAL model to VAL dataset 
+plot((exp(tss.val$logTSS)-1) ~ (exp(pred.rf.red_15_val)-1), log = "xy",  xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', main = '',
+  xlim = (c(0.2,100)), ylim = c(0.2,100))
+abline(a=0,b=1)
+#text(50, 0.5, "RMSE = 13.68 
+#%Var = #")
+
+# VAL residuals
+#residuals.red_15 <- (exp(tss.cal$logTSS)-1) - (exp(pred.rf.red_15)-1) # Observed minus predicted 
+plot(residuals.red_15_val ~ (exp(pred.rf.red_15_val)-1), xlab = "predicted TSS (mg/L)", ylab = "residuals (obs-pred)", main="", log = "x")
+abline(h=0, col = "red", pch = 2, lty = 2)
+
+# REF-ONLY PREDICTION PLOT -------------------------------------------------------------------------------------------------------------------------
+par(mfrow = c(1,2))
+
+pred.rf.ref.red_11 <- predict(rf.ref.red_11, newdata = tss.ref)
+plot((exp(tss.ref$logTSS) -1) ~ (exp(pred.rf.ref.red_11)-1), log = "xy",
+     xlab = 'predicted TSS (mg/L)', ylab = 'observed TSS (mg/L)', xlim = c(0.2,100), ylim = c(0.2,100), main = '')
+abline(a=0,b=1)
+
+# REF RESIDUALS
+residuals.ref_11 <- (exp(tss.ref$logTSS)-1) - (exp(pred.rf.ref.red_11)-1) # Observed minus predicted 
+plot(residuals.ref_11 ~ (exp(pred.rf.ref.red_11)-1), xlab = "predicted TSS (mg/L)", ylab = "residuals (obs-pred)", main="", log = "x")
+abline(h=0, col = "red", pch = 2, lty = 2)
+
+
+par(mfrow = c(1,2))
+# ALL-SITESREF EXPECTATIONS ------------------------------------------------------------------------------------------------------------------------
+pred.rf.red_15.all<- predict(rf.red_15, tss.cal_val.refadj) #model prediction on cal+val dataset
+plot((exp(tss.cal_val.refadj$logTSS)-1) ~ (exp(pred.rf.red_15.all)-1), log = "xy", xlab = 'TSS reference expectations (mg/L)', ylab = 'observed TSS (mg/L)', ylim = c(0.2,100), xlim = c(0.2,100), main = 'All-Sites')
+abline(a=0,b=1, untf = TRUE)
+#abline(a=0.6931472,b=1, col = 'red')
+abline(a=0,b=2, col = 'red', lty = 'dashed', untf = TRUE)
+#fix scales and logs
+
+
+# REF-ONLY REF EXPECTATIONS ------------------------------------------------------------------------------------------------------------------------
+pred.rf.ref.red_11 <- predict(rf.ref.red_11, newdata = tss.cal_val)
+plot((exp(tss.cal_val$logTSS) -1) ~ (exp(pred.rf.ref.red_11)-1), log = "xy",
+     xlab = 'TSS reference expectations (mg/L)', ylab = 'observed TSS (mg/L)', xlim = c(0.2,100), ylim = c(0.2,100), main = 'Reference-Only')
+abline(a=0,b=1, untf = TRUE)
+abline(a=0,b=2, col = 'red', lty = 'dashed', untf = TRUE)
+
+
+# CALCULATE PROPORTIONS ABOVE 1:1 AND 2:1 LINES
+oe.ref <- cbind(pred.rf.ref.red_11, tss.cal_val$logTSS)
+oe.ref <- as.data.frame(oe.ref) %>% 
+  rename(pred_logTSS = V2) %>% 
+  mutate(obs_TSS = exp(tss.cal_val$logTSS) -1) %>% 
+  mutate(pred_TSS = exp(pred.rf.ref.red_11)-1) %>% 
+  mutate('O/E' = obs_TSS/pred_TSS)
+
+print(sum(oe.ref$`O/E`>1)/741) # prop above 1:1 line
+print(sum(oe.ref$`O/E`>2)/741) # prop above 2:1 line
+```
+
+#### Plot Obs vs pred CAL and VAL all sites
 
 ```{r}
 # plot obs vs. predicted CAL 
@@ -1098,166 +1096,4 @@ plot(x = (exp(pred.rf.red_15_val)-1), y = residuals.red_15_val,
 	  pch=2, col='red', 
 	  lwd=1.5,cex.lab=1.5, las = 1, font = 2, cex=1.3,
 	  axes=FALSE)
-```
-
-```{r}
-# HUMAN INFLUENCED VARS --looking at all reference sites.
-
-# Select only the 8 human influenced predictors from the reduced model.
-tss.ref.hi <- tss.sc %>% 
-  filter(ReferenceSite == 'REFERENCE') %>% 
-  #filter(cal_val == 'CAL') %>% 
-  select(c(WDRW_LDWS,PESTIC1997WS,PCTCROP2001WS,POPDEN2010WS,PCTAGSLPMID2001WS,SW_FLUXWS,PCTIMP2001WS,RDCRSWS))
-
-# Agricultural fresh surface water withdrawl kg/sq km  
-# Want to scale back to 0.
-
-par(mfrow=c(1,2))
-partialPlot(rf.red_15, as.data.frame(tss.cal_val), WDRW_LDWS, main = '', ylab = "log Predicted TSS")
-abline(v= 0 , col = 'black', lty = 'dashed')
-hist(tss.ref.hi$WDRW_LDWS, main = '', xlab='WDRW_LDWS')
-
-# Mean pesticide use kg/sq km
-# Want to scale back to 0.
-par(mfrow=c(1,2))
-partialPlot(rf.red_15, as.data.frame(tss.cal_val), PESTIC1997WS, main = '', ylab = "log Predicted TSS")
-abline(v=quantile(tss.ref.hi$PESTIC1997WS, probs = c(0.5)), col = c( 'black'),lty = 'dashed')
-hist(tss.ref.hi$PESTIC1997WS, main = '', xlab = 'PESTIC1997WS')
-quantile(tss.ref.hi$PESTIC1997WS, probs = seq(.1, .9, by = .1))
-
-# Percent of WS classified as row crops.
-# Want to scale back to 0.
-par(mfrow=c(1,2))
-partialPlot(rf.red_15, as.data.frame(tss.cal_val), PCTCROP2001WS, main = '', ylab = "Predicted TSS")
-abline(v=quantile(tss.ref.hi$PCTCROP2001WS, probs = c(0.5)), col = c('black'),lty = 'dashed')
-hist(tss.ref.hi$PCTCROP2001WS, main = '', xlab = 'PCTCROP2001WS')
-quantile(tss.ref.hi$PCTCROP2001WS, probs = seq(.1, .9, by = .1))
-
-# Mean population density people / sq km
-# Want to scale back to 50th percentile.
-par(mfrow=c(1,2))
-partialPlot(rf.red_15, as.data.frame(tss.cal_val), POPDEN2010WS, main = '', ylab = "log Predicted TSS", scale_x_log10())
-abline(v=quantile(tss.ref.hi$POPDEN2010WS, probs = c(0.5)), col = c('black'),lty = 'dashed')
-hist(tss.ref.hi$POPDEN2010WS, main = '', xlab = 'POPDEN2010WS')
-quantile(tss.ref.hi$POPDEN2010WS, probs = seq(.1, .9, by = .1))
-
-# Percent landcover ag dominated on >10% slope
-# Want to scale back to 0.
-par(mfrow=c(1,2))
-partialPlot(rf.red_15, as.data.frame(tss.cal_val), PCTAGSLPMID2001WS, main = '', ylab = "log Predicted TSS")
-abline(v=quantile(tss.ref.hi$PCTAGSLPMID2001WS, probs = c(0.5)), col = c( 'black'),lty = 'dashed')
-hist(tss.ref.hi$PCTAGSLPMID2001WS, main = '', xlab = 'PCTAGSLPMID2001WS')
-quantile(tss.ref.hi$PCTAGSLPMID2001WS, probs = seq(.1, .9, by = .1))
-
-# Surface Water Nitrogen Flux
-# Scale back to 50th percent.  Partial dependence plot looks strange and is hard to explain- might consider dropping from model.
-par(mfrow=c(1,2))
-partialPlot(rf.red_15, as.data.frame(tss.cal_val), SW_FLUXWS, main = '', ylab = "log Predicted TSS")
-abline(v=quantile(tss.ref.hi$SW_FLUXWS, probs = c(0.5)), col = c('black'),lty = 'dashed')
-hist(tss.ref.hi$SW_FLUXWS, main = '', xlab = 'SW_FLUXWS')
-quantile(tss.ref.hi$SW_FLUXWS, probs = seq(.1, .9, by = .1))
-
-# Mean imperviousness 
-# Scale back to 50th percentile.
-par(mfrow=c(1,2))
-partialPlot(rf.red_15, as.data.frame(tss.cal_val), PCTIMP2001WS, main = '', ylab = "log Predicted TSS")
-abline(v=quantile(tss.ref.hi$PCTIMP2001WS, probs = c(0.5)), col = c( 'black'),lty = 'dashed')
-hist(tss.ref.hi$PCTIMP2001WS, main = '', xlab = 'PCTIMP2001WS')
-quantile(tss.ref.hi$PCTIMP2001WS, probs = seq(.1, .9, by = .1))
-
-# Road and stream intersection density per sq km
-# Want to scale back to 0.
-# Experimenting with plotting only the 50th percentile vertical reference line
-quantile(tss.ref.hi$RDCRSWS, probs = seq(.1, .9, by = .1))
-
-par(mfrow=c(1,2))
-partialPlot(rf.red_15, as.data.frame(tss.cal_val), RDCRSWS, main = '', ylab = "log Predicted TSS", xlab = "RDCRSWS")
-abline(v = 0, col = 'black',lty = 'dashed')
-hist(tss.ref.hi$RDCRSWS, main = '', xlab = 'RDCRSWS', ylim = c(0,100))
-abline(v = 0.005, col = 'black',lty = 'dashed')
-```
-
-#### Coefficient of Variation for env predictors
-
-```{r}
-top20 <- scmets %>% 
-select('WDRW_LDWS', 'PCTCONIF2001WS' , 'CLAYWS' , 'PESTIC1997WS' , 'SANDWS' , 'PCTCROP2001WS' , 'POPDEN2010WS' , 'PRECIP9120WS' , 'PCTAGSLPMID2001WS' , 'PCT_EROD' , 'SW_FLUXWS' , 'PCTIMP2001WS' , 'RDCRSWS' , 'WTDEPWS' , 'ELEVWS' , 'WETINDEXWS' , 'PCTSHRB2001WS' , 'KFFACTWS' , 'PCTICE2001WS' , 'RCKDEPWS')
-
-cv1 <- sd(top20$PCTICE2001WS)/mean(top20$PCTICE2001WS)
-
-library(EnvStats)
-
-cv_top20 <- top20 %>% 
-  summarise(across(everything(), ~ cv(.x)))
-
-cv_top20<-pivot_longer(cv_top20, 1:20, names_to="Var", values_to="CV")
-
-write_xlsx(cv_top20, path = paste0("C://Users//sberzin//OneDrive - Oregon//Desktop//CofV", Sys.Date(), ".xlsx"))
-
-cv_all <- scmets %>% 
-  select(-COMID) %>% 
-  select(-SITE_TYPE) %>% 
-  summarise(across(everything(), ~ cv(.x)))
-
-cv_all<-pivot_longer(cv_all, 1:77, names_to="Var", values_to="CV")
-
-write_xlsx(cv_all, path = paste0("C://Users//sberzin//OneDrive - Oregon//Desktop//CofV_all", Sys.Date(), ".xlsx"))
-
-```
-
-#---------------------------------------------------------------------------
-
-THE ADAM L. THOMPSON MEMORIAL CODE BONEYARD
-
-#---------------------------------------------------------------------------
-
-### PLOTS for final paper
-
-```{r}
-tss.plots <- tss %>%   # These get removed in the code later, but I'm taking them out here to take advantage of all the columns that came from AWQMs before they get removed.
-  filter(MLocID != '23856-ORDEQ') %>% 
-  filter(MLocID != '30625-ORDEQ') %>% 
-  filter(MLocID != '30727-ORDEQ') %>% 
-  filter(MLocID != '12266-ORDEQ')
-
-tss.plots$ReferenceSite <- factor(tss.plots$ReferenceSite, levels = c("REFERENCE", "MODERATELY DISTURBED", "MOST DISTURBED"))
-
-tss.plots.sum <- tss.plots %>% 
-  group_by(ReferenceSite) %>% 
-  summarize(n.Samples = n(),
-            mean = mean(TSS),
-            median = median(TSS),
-            min = min(TSS),
-            max = max(TSS), 
-            sd = sd(TSS))
-
-ggplot(tss.plots, aes(x = ReferenceSite,y = TSS)) +
-    geom_boxplot(outlier.size = 0.9) +
-    labs(x = "Reference Status", y = "TSS (mg/L)")  +
-    theme(axis.text.x = element_text( vjust = 0.5))
-```
-
-
-## PREDICTOR VARIABLES
-
-```{r}
-# HISTOGRAMS
-hist(scmets$WDRW_LDWS, main = "", xlab = "Water Withdrawal")
-hist(scmets$PCTCONIF2001WS, main = "", xlab = "Pct Conif")
-hist(scmets$CLAYWS, main = "", xlab = "Mean Clay")
-hist(scmets$PESTIC1997WS, main = "", xlab = "Pesticides")
-hist(scmets$SANDWS, main = "", xlab = "Mean Sand")
-hist(scmets$PCTCROP2001WS, main = "", xlab = "Pct Crop")
-
-# KERNEL DENSITY PLOTS
-kern <- scmets %>%
-  select(WDRW_LDWS , PCTCONIF2001WS , CLAYWS , PESTIC1997WS , SANDWS , PCTCROP2001WS , POPDEN2010WS)
-
-kern %>%
-  keep(is.numeric) %>% 
-  gather() %>% 
-  ggplot(aes(value)) +
-  facet_wrap(~ key, scales = "free") +
-  geom_density() +
-  geom_rug() 
 ```
